--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "authors": [
         {
             "name": "franckysolo",
-            "email": "franckysolo@gmail.com"
+            "email": "franckysolo@gmail.com",
+            "role": "Developer"
         }
     ],
     "autoload": {
